public/css/home.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");

#above-search {
  display: none;
}



.above {
  margin-left: 5rem;
}

.flex-main {
  margin-left: 5rem;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap
}

.post-btn{
  display: none;
  text-align: right;
  /*margin-right: 35px;*/
  /*margin-top: 60px;*/
}
/*display on mobile view only*/
@media only screen
and (min-device-width : 320px)
and (max-device-width : 550px){
  .post-btn {display: block;}
}

.topPartDiv {
  display: flex;
  flex-direction: row;
}

.name-and-time {
  justify-content: center;

  display: flex;
  flex-direction: column;
  align-items: left;
}

.topPartDiv > .name-and-time {
  width: 50%;
  justify-content: center;
  align-items: left;
}

.flex-main > .column {
  width: 45%;
  margin-left: 24px;
  margin-right: 24px;
  display: flex;
  flex-direction: column;
}

#mainmain > #stories {
  background-color: #eff0f3; /* temp */
  margin-top: 24px;
  width: 100%;
  border-radius: 12px;
}

#mainmain > #posts {
  background-color: #eff0f3; /* temp */
  margin-top: 24px;
  width: 100%;
  margin-bottom: 24px;
  border-radius: 12px;
}

#sidemain > #whats-new {
  background-color: #eff0f3;
  margin-top: 24px;
  padding-left: 24px;
  padding: 24px;
  width: 100%;
  border-radius: 12px;
  box-shadow: 5px 5px 18px -8px rgba(33, 64, 73, 0.65);
}

#sidemain > #recommended-connections {
  background-color: #eff0f3;
  margin-top: 24px;
  padding: 24px;
  width: 100%;
  box-shadow: 5px 5px 18px -8px rgba(33, 64, 73, 0.65);
  margin-bottom: 24px;
}

.heading-title {
  padding-top: 24px;
}

@media screen and (max-width: 550px) {
  .above {
    margin-left: 0;
  }

  #above-search {
    display: unset;
  }

  #sidemain {
    display: none;
  }

  .flex-main > .column {
    width: 100%;
  }

  .flex-main {
    margin-left: 0;
  }

  #mainmain > #posts {
    margin-bottom: 96px;
  }

  .heading-title {
    padding-top: 12px;
    padding-left: 0px;
  }

  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }

  .menu-and-search {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
  }

  .menu-and-search > .mobile-menu > a {
    width: 20%;
    height: auto;
    margin-right: 24px;
  }

  .menu-and-search > #above-search {
    width: 80%;
    margin-right: 24px;
  }

  .search input[type="text"] {
    font-family: "Montserrat";
    border: 0px;
    padding-left: 12px;
    padding-top: 8px;
    padding-bottom: 8px;
    width: 80%;
    height: 100%;
  }

  .search {
    background-color: white;
  }

  .search button {
    padding-top: 10px;
    padding-bottom: 10px;
    width: 20%;
    height: 100%;
  }
}

.profilepic {
  height: 60px;
  width: 60px;
  background-color: #bbb;
  border-radius: 50%;
  background-size: 60px;
}

.userName {
  /* Body text */
  font-family: "Open Sans";
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  /* identical to box height */

  color: #000000;
}

.stories {
  display: flex;
  overflow: auto;
  height: 130px;
}

.story {
  margin-right: 20px;
  text-align: center;
  width: 80px;
}

#stories::-webkit-scrollbar {
  display: none;
}

#whats-new-volunteering-opportunities::-webkit-scrollbar {
  display: none;
}

#posts::-webkit-scrollbar {
  display: none;
}

.postpicture {
  width: 100%;
  height: 160%;
  border-radius: 10px;
  background-position: center;
  display: flex;
  flex-direction: row;
}

.userNames {
  /* Heading 3 */

  font-family: "Montserrat";
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  /* identical to box height */

  color: #000000;
}

.firstDivPicture {
  width: 100px;
  height: 100px;
}

.userAt {
  width: 64px;
  height: 19px;

  /* Body Subheading */

  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 19px;
  /* identical to box height */

  color: #000000;
}

#whoto {
  /* Heading 2 */

  font-family: "Montserrat";
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 29px;
  margin-bottom: 20px;

  color: #0367a6;
}

.storyImgDiv {
  min-width: 80px;
  min-height: 80px;
  background-repeat: no-repeat;
  background-size: 100%;
}

.followUserButton {
  /* Accent */
  border: 1.5px solid #51b09f;
  box-sizing: border-box;
  width: 100%;
  border-radius: 40px;
  /* Body Title */
  font-family: "Open Sans";
  font-style: normal;
  font-weight: bold;
  font-size: 16px;
  padding: 10px;
  color: #51b09f;
  text-align: center;
}

.recommendedUserDiv {
  display: flex;
  align-items: stretch;
}

.name-and-userName {
  justify-content: center;
  margin-left: 20px;
  display: flex;
  flex-direction: column;
  align-items: left;
}

.followUser {
  justify-content: center;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

hr {
  border: 0.5px solid #51b09f;
  background-color: #51b09f;
}

.headers {
  /* height: 1px; */
  border-top: 0.5px solid #51b09f;
}

#whats-new-title {
  width: 165px;
  height: 29px;

  /* Heading 2 */

  font-family: Montserrat;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 29px;

  color: #0367a6;
}

#recommended-title {
  width: 100%;
  /* Heading 3 */
  font-family: Montserrat;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  /* identical to box height */
  color: #000000;
}

.divLocation {
  width: 129.02px;
  height: 48.11px;

  /* Heading 3 */

  font-family: Montserrat;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;

  color: #000000;
}

.divPosition {
  width: 116.99px;
  height: 20.77px;

  /* Body text */

  font-family: Open Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 19px;

  color: #000000;
}

#view-all {
  top: 1000px;
  width: 328px;
  height: 22px;

  /* Heading 3 */

  font-family: Montserrat;
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  /* identical to box height */

  color: #51b09f;
}

#whats-new-volunteering-opportunities {
  display: flex;
  overflow: auto;
}

.content {
  margin-left: 5rem;
  padding-top: 20px;
  padding-left: 20px;
}

.bodytext {
  padding-top: 10px;
  width: 75%;
}

.category {
  margin-top: 20px;
  margin-right: 20px;
}

#recommended-category,
#fine-arts-category,
#sports-category,
#literacy-category,
#environment-category,
#health-category,
#computers-category {
  width: 100%;
}

#recommended-opportunities,
#fine-arts-opportunities,
#sports-opportunities,
#literacy-opportunities,
#environment-opportunities,
#health-opportunities,
#computers-opportunities {
  display: flex;
  overflow: auto;
  flex-direction: row;
  margin-right: 20px;
}

.heading3 {
  width: 100%;
}

.opportunity {
  flex: 1 0 18%; /* The important bit. This percentage decides your columns. 
    The percent can be px. It just represents your minimum starting width.
     */
  padding: 20px;
  margin-right: 10px;
  width: 200px;
  background-color: #eff0f3;
  color: #214049;
  border-radius: 12px;
  flex-direction: row;
  justify-content: left;
  align-items: left;
  box-shadow: 5px 5px 18px -8px rgba(33, 64, 73, 0.65);
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  border-radius: 12px;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
  display: flex;
}

.modal-column {
  flex: 1 0 50%; /* The important bit. This percentage decides your columns. 
    The percent can be px. It just represents your minimum starting width.
     */
  color: #214049;
  flex-direction: row;
  justify-content: left;
  align-items: left;
}

.modal-img {
  width: 60%;
  background-image: url("../images/placeholder1.png");
  background-size: 100%;
}

.modal-text {
  width: 20%;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 10px;
}

/* The Close Button */
.close {
  color: #51b09f;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

#modalDescription {
  padding-bottom: 10px;
  padding-top: 0px;
}

.primarybutton {
  width: 100%;
  padding: 20px;
}

.heading2 {
  padding-bottom: 10px;
}

@media screen and (max-width: 900px) {
  .name-and-userName {
    margin-left: 10px;
  }

  .name-and-userName > .userNames {
    font-size: 14px;
  }

  .name-and-userName > .userAt {
    font-size: 10px;
  }

  .storyImgDiv {
    width: 50px;
    height: 50px;
    min-width: 50px;
    min-height: 50px;
  }

  .followUserButton {
    font-size: 12px;
  }
}

@media screen and (max-width: 750px) {
  .followUserButton {
    max-width: 30px;
  }

  .name-and-userName > .userNames {
    font-size: 12px;
  }

  .name-and-userName > .userAt {
    font-size: 8px;
  }
}

@media screen and (max-width: 550px) {
  .content {
    margin-left: 0px;
    margin-bottom: 100px;
  }

  .heading1 {
    width: 75%;
  }

  .bodytext {
    width: 100%;
    padding-right: 10px;
  }

  .modal-content {
    display: block;
  }

  .modal-column {
    width: 100%;
  }

  .modal-img {
    height: 200px;
    margin-bottom: 10px;
  }

  #modalButton {
    background-color: #0367a6;
    padding: 12px 20px;
    border: none;
    color: #eff0f3;
    font-family: "Montserrat";
    font-weight: 500;
    font-size: 14px;
    border-radius: 10px;
    outline: none;
  }
}

